--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
   <title>Frontend Mentor | NFT preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+
   
 </head>
 <body>
   <div class="container">
     <div class="image">
-      <img src="/images/image-equilibrium.jpg">
+      <img src="https://github.com/Katja721/nft-preview-card/blob/main/images/image-equilibrium.jpg?raw=true">
     </div>
     <div class="text">
       <div class="heading">
@@ -27,16 +27,16 @@
         <p>Our Equilibrium collection promotes balance and calm.</p>
       </div>
       <div class="value">
-      <img src="/images/icon-ethereum.svg">
+      <img src="https://raw.githubusercontent.com/Katja721/nft-preview-card/b8b82382265ea5070ae61f7e529e936ddc50e268/images/icon-ethereum.svg">
       <p>0.041 ETH </p>
       </div>
       <div class="time">
-      <img src="/images/icon-clock.svg">
+      <img src="https://raw.githubusercontent.com/Katja721/nft-preview-card/b8b82382265ea5070ae61f7e529e936ddc50e268/images/icon-clock.svg">
       <p>3 days left</p>
       </div>
     </div>
     <div class="creator">
-      <div class="image-border"><img src="/images/image-avatar.png"></div>
+      <div class="image-border"><img src="https://github.com/Katja721/nft-preview-card/blob/main/images/image-avatar.png?raw=true"></div>
       <p>Creation of <span class="name">Jules Wyvern</span></p>
     </div>
   </div>
