--- a/index.html
+++ b/index.html
@@ -10,36 +10,41 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
   <title>Frontend Mentor | NFT preview card component</title>
-
-
   
 </head>
-<body>
-  <div class="container">
-    <div class="image">
-      <img src="https://github.com/Katja721/nft-preview-card/blob/main/images/image-equilibrium.jpg?raw=true">
+<div class="container">
+  <div class="image">
+    <img src="https://github.com/Katja721/nft-preview-card/blob/main/images/image-equilibrium.jpg?raw=true">
+  </div>
+  <div class="text">
+    <div class="heading">
+      <h1>Equilibrium #3429</h1>
     </div>
-    <div class="text">
-      <div class="heading">
-        <h1>Equilibrium #3429</h1>
-      </div>
-      <div class="description">
-        <p>Our Equilibrium collection promotes balance and calm.</p>
-      </div>
-      <div class="value">
-      <img src="https://raw.githubusercontent.com/Katja721/nft-preview-card/b8b82382265ea5070ae61f7e529e936ddc50e268/images/icon-ethereum.svg">
-      <p>0.041 ETH </p>
+    <div class="description">
+      <p>Our Equilibrium collection promotes balance and calm.</p>
+    </div>
+    <div class="order">
+      <div class="price">
+        <img src="https://raw.githubusercontent.com/Katja721/nft-preview-card/b8b82382265ea5070ae61f7e529e936ddc50e268/images/icon-ethereum.svg">
+          <p>0.041 ETH </p>
       </div>
       <div class="time">
-      <img src="https://raw.githubusercontent.com/Katja721/nft-preview-card/b8b82382265ea5070ae61f7e529e936ddc50e268/images/icon-clock.svg">
-      <p>3 days left</p>
+        <img src="https://raw.githubusercontent.com/Katja721/nft-preview-card/b8b82382265ea5070ae61f7e529e936ddc50e268/images/icon-clock.svg">
+          <p>3 days left</p>
       </div>
     </div>
     <div class="creator">
-      <div class="image-border"><img src="https://github.com/Katja721/nft-preview-card/blob/main/images/image-avatar.png?raw=true"></div>
-      <p>Creation of <span class="name">Jules Wyvern</span></p>
+      <div class="creator_image">
+        <img src="https://github.com/Katja721/nft-preview-card/blob/main/images/image-avatar.png?raw=true">
+      </div>
+      <div class="creator_text">
+        <p>Creation of <span class="name">Jules Wyvern</span></p>
+      </div>
     </div>
   </div>
+</div>
+<body>
+
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
