--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 </head>
 <div class="container">
   <div class="image">
-    <img src="https://github.com/Katja721/nft-preview-card/blob/main/images/image-equilibrium.jpg?raw=true">
+    <figure>
+      <img src="./images/image-equilibrium.jpg" class="etherum-img">
+      <div class="icon-view">
+          <img src="./images/icon-view.svg" alt="icon-view" class="icon">
+      </div>
+  </figure>
   </div>
   <div class="text">
     <div class="heading">
