--- a/index.html
+++ b/index.html
@@ -1,59 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
-  <title>Frontend Mentor | NFT preview card component</title>
-  
-</head>
-<div class="container">
-  <div class="image">
-    <figure>
-      <img src="./images/image-equilibrium.jpg" class="etherum-img">
-      <div class="icon-view">
-          <img src="./images/icon-view.svg" alt="icon-view" class="icon">
-      </div>
-  </figure>
-  </div>
-  <div class="text">
-    <div class="heading">
-      <h1>Equilibrium #3429</h1>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
+    <title>Frontend Mentor | NFT preview card component</title>
+  </head>
+  <main class="container">
+    <div class="image">
+      <figure>
+        <img
+          src="./images/image-equilibrium.jpg"
+          alt="Equilibrium"
+          class="etherum-img"
+        />
+        <div class="icon-view">
+          <img src="./images/icon-view.svg" alt="icon-view" class="icon" />
+        </div>
+      </figure>
     </div>
-    <div class="description">
-      <p>Our Equilibrium collection promotes balance and calm.</p>
-    </div>
-    <div class="order">
-      <div class="price">
-        <img src="https://raw.githubusercontent.com/Katja721/nft-preview-card/b8b82382265ea5070ae61f7e529e936ddc50e268/images/icon-ethereum.svg">
-          <p>0.041 ETH </p>
+    <div class="text">
+      <div class="heading">
+        <h1>Equilibrium #3429</h1>
       </div>
-      <div class="time">
-        <img src="https://raw.githubusercontent.com/Katja721/nft-preview-card/b8b82382265ea5070ae61f7e529e936ddc50e268/images/icon-clock.svg">
+      <div class="description">
+        <p>Our Equilibrium collection promotes balance and calm.</p>
+      </div>
+      <div class="order">
+        <div class="price">
+          <img
+            src="https://raw.githubusercontent.com/Katja721/nft-preview-card/b8b82382265ea5070ae61f7e529e936ddc50e268/images/icon-ethereum.svg"
+            alt="etherium icon"
+          />
+          <p>0.041 ETH</p>
+        </div>
+        <div class="time">
+          <img
+            src="https://raw.githubusercontent.com/Katja721/nft-preview-card/b8b82382265ea5070ae61f7e529e936ddc50e268/images/icon-clock.svg"
+            alt="time"
+          />
           <p>3 days left</p>
+        </div>
+      </div>
+      <div class="creator">
+        <div class="creator_image">
+          <img
+            src="https://github.com/Katja721/nft-preview-card/blob/main/images/image-avatar.png?raw=true"
+            alt="user avatar"
+          />
+        </div>
+        <div class="creator_text">
+          <p>Creation of <span class="name">Jules Wyvern</span></p>
+        </div>
       </div>
     </div>
-    <div class="creator">
-      <div class="creator_image">
-        <img src="https://github.com/Katja721/nft-preview-card/blob/main/images/image-avatar.png?raw=true">
-      </div>
-      <div class="creator_text">
-        <p>Creation of <span class="name">Jules Wyvern</span></p>
-      </div>
-    </div>
-  </div>
-</div>
-<body>
-
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/Katja721">Katja Debevc</a>.
-  </div>
-</body>
+  </main>
+  <body>
+    <footer class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="https://github.com/Katja721">Katja Debevc</a>.
+    </footer>
+  </body>
 </html>
